Fix UI issues at top of confirm page container
This commit fixes a few issues with ConfirmPageContainerSummary (which
holds the contract being used or action being performed and the money
being sent):

* Remove fixed height so that the secondary currency doesn't get cut off
  or spill over
* Add missing padding
* Fix font size of primary and secondary currencies
* Add top border when there is a "address not in your address book"
  alert at the top

--- a/ui/components/app/confirm-page-container/confirm-page-container-content/index.scss
+++ b/ui/components/app/confirm-page-container/confirm-page-container-content/index.scss
@@ -8,6 +8,10 @@
   display: flex;
   flex-direction: column;
 
+  &--with-top-border {
+    border-top: 1px solid var(--geyser);
+  }
+
   &__error-container {
     padding: 0 16px 16px 16px;
   }
